--- a/templates/incluir_jogo.html
+++ b/templates/incluir_jogo.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Incluir Novo Jogo</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
