--- a/templates/incluir_jogo.html
+++ b/templates/incluir_jogo.html
@@ -20,6 +20,7 @@
     </form>
 
     <br>
-    <a href="/">⬅️ Voltar para Home</a>
+    <a class="botao" href="/perfil">⬅️ Voltar ao Perfil</a>
+
 </body>
 </html>
