Finalização e ajustes visuais para deploy

--- a/templates/apostar.html
+++ b/templates/apostar.html
@@ -39,6 +39,7 @@
         {% endif %}
 
         <a href="/perfil" class="caixa-acao">⬅️ Voltar ao Perfil</a>
+
     </div>
 
     <script>
@@ -58,3 +59,4 @@
     </script>
 </body>
 </html>
+<a href="/home" class="botao-voltar-home">🏠 Ir para Home</a>
