--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BET Construmar - Home</title>
+    <title>BET OldSchool - Home</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <h2>🏠 BET Construmar - Jogos Disponíveis para Apostar</h2>
+    <h2>🏠 BET OldSchool - Jogos Disponíveis para Apostar</h2>
 
     <a href="/incluir_jogo">➕ Incluir Novo Jogo</a>
     <br><br>
